--- a/0x01-react_intro/task_4/dashboard/package.json
+++ b/0x01-react_intro/task_4/dashboard/package.json
@@ -2,11 +2,12 @@
   "name": "dashboard",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://obieomens.github.io/alx-react",
+
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "enzyme": "^3.11.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
@@ -16,12 +17,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
-  "jest": {
-  "setupFilesAfterEnv": ["<rootDir>/src/setupTests.js"]
-},
-
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -41,6 +40,6 @@
     ]
   },
   "devDependencies": {
-    "@cfaester/enzyme-adapter-react-18": "^0.8.0"
+    "gh-pages": "^6.1.1"
   }
 }
